--- a/Host.Api/appsettings.json
+++ b/Host.Api/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Server=localhost;Database=PlatformDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:5211", "http://localhost:5212", "http://127.0.0.1:5211", "http://127.0.0.1:5212" ]
+    "AllowedOrigins": [ "http://localhost:3000", "http://localhost:3001", "http://127.0.0.1:3000", "http://127.0.0.1:3001", "http://localhost:5211", "http://localhost:5212", "http://127.0.0.1:5211", "http://127.0.0.1:5212" ]
   },
   "Jwt": {
     "Issuer": "Platform",
